[package]
name = "mockbox"
description = "A Rust-based HTTP mock server with scripting capabilities using Rune."
license-file = "LICENSE"
version = "0.13.3"
edition = "2024"
repository = "https://github.com/hardliner66/mockbox"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["full"] }
rune = "0.14.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3.23"
clap = { version = "4.6.0", features = ["derive", "env"] }
anyhow = "1.0.102"
rune-modules = { version = "0.14.1", features = ["full"] }
directories = "6.0.0"
notify = "7.0.0"
parking_lot = "0.12"
rand = { version = "0.10.0", optional = true }

[target.'cfg(unix)'.dependencies]
privdrop = "0.5.6"
is-root = "0.1.3"

[features]
default = ["rng", "storage", "spec"]
rng = ["dep:rand"]
storage = []
spec = ["rng"]

[profile.dev.package."*"]
opt-level = 3
